# sana-wm-pipeline

./: .gitattributes  .gitignore  .gitmodules  DATA_ANNOTATION_STATUS.md  LICENSING.md  PROGRESS.md  README.md  pyproject.toml  vipe_comparison_experiment.md
configs/: filter_thresholds.yaml  pipeline.yaml  sources.yaml
docs/: DATASETS.md  JDVBBFB_DEFAULT_GUIDE.md  REPRODUCTION_GUIDE.md  TROUBLESHOOTING.md  vipe_integration_issues.md
docs/analysis/: vipe-pi3x-moge2-dl3dv-feasibility.md  vipe_isolation_check.md
docs/operation_logs/: 2026-06-12-dl3dv-e2e-implementation.md  2026-06-13-gtpose-vs-default-mode-experiment.md
experiments/data_production_smoke/: compare_modes.py  compare_omniworld_modes.py  download_dl3dv.sh  prepare_dl3dv.py  prepare_jdvbbfb.py  prepare_omniworld.py  run_e2e_default.sh  run_e2e_default_jdvbbfb.sh  run_e2e_default_omniworld.sh  run_e2e_gtdepth.sh  run_e2e_gtpose.sh  run_sana_wm_inference.py  verify_and_eval.py
experiments/vipe_comparison/: README_REPRODUCTION.md  RESULTS_fr1_desk.md  RESULTS_fr2_desk.md  (+8 more)
scripts/: 00_setup_vipe.sh  download_smoke_modelscope.sh  download_smoke_subset.sh  e2e_smoke.sh  pi3x_infer_cli.py  verify_consistency.py
tests/: conftest.py  test_apply_table6.py  test_caption_postprocess.py  test_coverage_gate.py  test_depth_fusion.py  test_jdvbbfb_wds.py  test_normalize.py  test_per_frame_intrinsics.py  test_pose_modes.py  test_pose_quality.py  test_ray_pipeline.py  test_smoke.py  test_sources.py  test_traj_synthesis.py  test_umeyama.py  test_verify_consistency.py  test_visual_metrics.py  test_webdataset_writer.py
(+61 files in other folders)
